<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearVIewSIgnup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity"
    android:padding="8dp"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/signup"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUsernameSignup"
        android:layout_width="match_parent"
        app:errorTextAppearance="@style/error_appearance"
        app:errorEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:hint="@string/user"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPhoneSignup"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPasswordSignup"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textConfirmPasswordSignup"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirmpass"
                />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignupSignup"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/signup"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="4dp">

        <View
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="@color/material_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/old"
            android:layout_margin="16dp"/>

        <View
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="@color/material_white"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSigninSignup"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/signin"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:theme="@style/LinearProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>

</LinearLayout>