<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearViewSignin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/signin"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUsernameSignin"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPasswordSignin"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSigninSignin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/signin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="4dp">

        <View
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="@color/material_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/or"
            android:layout_margin="16dp"/>

        <View
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="@color/material_white"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignupSignin"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/signup"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarsignin"
        android:visibility="invisible"
        android:theme="@style/LinearProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>
</LinearLayout>
